# pkginspect

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
pkginspect/: cli.py  rules.yaml
src/pkginspect/: cli.py  rules.yaml
