[build-system]
build-backend = "uv_build"
requires = ["uv_build<0.8"]

[project]
name = "pkginspect"
version = "25.7.7"
description = "Quick way to inspect the PKGBUILD and avoid bad packages."
dependencies = ["requests", "pyyaml"]
requires-python = ">=3.8"

[project.scripts]
pkginspect = "pkginspect.cli:main"

[tool.uv]
package = true
