[build-system]
build-backend = "uv_build"
requires = ["uv_build<0.8"]

[dependency-groups]
lint = [
  "pre-commit>=3.5.0"
]
type = [
  "mypy[faster-cache]>=1.14.1",
  "types-pyyaml>=6.0.12.20241230",
  "types-requests>=2.32.0.20241016"
]

[project]
name = "pkginspect"
version = "25.7.7"
description = "Quick way to inspect the PKGBUILD and avoid bad packages."
dependencies = ["requests", "pyyaml"]
requires-python = ">=3.8"

[project.scripts]
pkginspect = "pkginspect.cli:main"

[tool.mypy]
disallow_any_unimported = true
python_version = "3.13"

[tool.uv]
default-groups = [
  "lint",
  "type"
]
package = true
